fix: headline text spacing

--- a/src/components/Headline/Headline.module.scss
+++ b/src/components/Headline/Headline.module.scss
@@ -9,5 +9,6 @@
 
   h1 {
     font-size: 66px;
+    line-height: 1.7;
   }
 }
